2009-08-24    <piumarta@netbsd.piumarta.com>

	* vm/config.cmake: Configure HAVE_DLOPEN instead of HAVE_LIBDL.

	* vm/sqUnixMain.c, vm/dlfcn-dyld.c, vm/sqUnixExternalPrims.c: Test
	HAVE_DLOPEN for dlopen() instead of HAVE_LIBDL.

	* vm-display-X11/sqUnixX11.c: Test HAVE_DLFCN_H instead of
	HAVE_LIBDL for presence of dlfcn.h.

2009-08-22    <piumarta@ubuntu.piumarta.com>

	* plugins/SerialPlugin/sqUnixSerial.c: Pointers are passed as 'void *'
	conforming to new SerialPlugin.h.  Remove redundant casts.

2009-08-21    <piumarta@ubuntu.piumarta.com>

	* CMakeLists.txt, cmake/Plugins.cmake,
	plugins/SqueakFFIPrims/config.cmake, vm/config.cmake: Remove uses
	of UNSET and REALPATH; reduce CMake required version to 2.6.2.
	
2009-08-19    <piumarta@ubuntu.piumarta.com>

	* plugins/SerialPlugin/sqUnixSerial.c: Add support for named ports.

	* plugins/RomePlugin/build.cmake: Add cross/plugins/SurfacePlugin
	to include search path.

2009-08-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/sqUnixXdnd.c: dprintf -> fdebugf.
	* vm/dlfcn-dyld.c: dprintf -> fdebugf.
	* vm/sqUnixExternalPrims.c: dprintf -> fdebugf.

	* vm-sound-NAS/sqUnixSoundNAS.c: dprintf -> debugf.
	* plugins/SqueakFFIPrims/x86-sysv.c: dprintf -> debugf.
	* plugins/SqueakFFIPrims/ppc-sysv.c: dprintf -> debugf.
	* plugins/SqueakFFIPrims/ppc-darwin.c: dprintf -> debugf.
	* plugins/SqueakFFIPrims/ffi-test.c: dprintf -> debugf.
	* plugins/SqueakFFIPrims/ffi-test-main.c: dprintf -> debugf.
	* plugins/PseudoTTYPlugin/sqUnixPseudoTTYPlugin.c: dprintf -> debugf.

	* vm/debug.c: __sq_dprintf -> __sq_debugf.  Include stdlib.h for abort().
	* vm/debug.h: dprintf -> debugf.
	* plugins/MIDIPlugin/sqUnixMIDIALSA.inc: dprintf -> debugf.
	* vm-display-Quartz/sqUnixQuartz.m: dprintf -> debugf.
	* vm-display-fbdev/sqUnixFBDevFramebuffer.c: dprintf -> debugf.
	* vm-display-fbdev/sqUnixFBDevKeyboard.c: dprintf -> debugf.
	* vm-display-fbdev/sqUnixFBDevKeymap.c: dprintf -> debugf.