@@ -96,6 +96,11 @@ ENDMACRO (CONFIG_DEFINE var)
 SET (UNIX 1)
 CONFIG_DEFINE (UNIX)
 
+SET (CMAKE_SKIP_BUILD_RPATH TRUE)
+SET (CMAKE_BUILD_WITH_INSTALL_RPATH TRUE) 
+SET (CMAKE_INSTALL_RPATH "")
+SET (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 INCLUDE (${unix}/vm/config.cmake)
 
 CONFIGURE_PLUGINS ()
